--- a/dsa-report.html
+++ b/dsa-report.html
@@ -186,86 +186,183 @@
       name: "IUs where NTD endemicity / morbidity mapping survey was conducted",
       type: rowTypes.DATA,
       cells: [
-        { dn: "LFDSA - IUs where NTD endemicity / morbidity mapping survey was conducted" },
-        { dn: "TCDSA - IUs where NTD endemicity / morbidity mapping survey was conducted" },
-        { dn: "ODSA - IUs where NTD endemicity / morbidity mapping survey was conducted" },
-        { dn: "SCDSA - IUs where NTD endemicity / morbidity mapping survey was conducted" },
-        { dn: "STDSA - IUs where NTD endemicity / morbidity mapping survey was conducted" },
+        {
+          dn:
+            "LFDSA - IUs where NTD endemicity / morbidity mapping survey was conducted",
+        },
+        {
+          dn:
+            "TCDSA - IUs where NTD endemicity / morbidity mapping survey was conducted",
+        },
+        {
+          dn:
+            "ODSA - IUs where NTD endemicity / morbidity mapping survey was conducted",
+        },
+        {
+          dn:
+            "SCDSA - IUs where NTD endemicity / morbidity mapping survey was conducted",
+        },
+        {
+          dn:
+            "STDSA - IUs where NTD endemicity / morbidity mapping survey was conducted",
+        },
         null,
-      ]
+      ],
     },
     {
       name: "People screened in endemicity / morbidity mapping surveys",
       type: rowTypes.DATA,
       cells: [
-        { dn: "LFDSA - People screened in endemicity / morbidity mapping surveys" },
-        { dn: "TCDSA - People screened in endemicity / morbidity mapping surveys" },
-        { dn: "ODSA - People screened in endemicity / morbidity mapping surveys" },
-        { dn: "SCDSA - People screened in endemicity / morbidity mapping surveys" },
-        { dn: "STDSA - People screened in endemicity / morbidity mapping surveys" },
+        {
+          dn:
+            "LFDSA - People screened in endemicity / morbidity mapping surveys",
+        },
+        {
+          dn:
+            "TCDSA - People screened in endemicity / morbidity mapping surveys",
+        },
+        {
+          dn:
+            "ODSA - People screened in endemicity / morbidity mapping surveys",
+        },
+        {
+          dn:
+            "SCDSA - People screened in endemicity / morbidity mapping surveys",
+        },
+        {
+          dn:
+            "STDSA - People screened in endemicity / morbidity mapping surveys",
+        },
         null,
-      ]
+      ],
     },
     {
       // TODO: Check me out - are cell definitions correct?
-      name: "People which were found to be positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)",
+      name:
+        "People which were found to be positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)",
       type: rowTypes.DATA,
       cells: [
-        { dn: "LFDSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)" },
-        { dn: "TCDSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)" },
-        { dn: "ODSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)" },
-        { dn: "SCDSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)" },
-        { dn: "STDSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)" },
+        {
+          dn:
+            "LFDSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)",
+        },
+        {
+          dn:
+            "TCDSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)",
+        },
+        {
+          dn:
+            "ODSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)",
+        },
+        {
+          dn:
+            "SCDSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)",
+        },
+        {
+          dn:
+            "STDSA - People positive with NTDs during endemicity / morbidity mapping surveys (clinical, RDT)",
+        },
         null,
-      ]
+      ],
     },
     {
-      name: "IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
+      name:
+        "IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
       type: rowTypes.DATA,
       cells: [
-        { dn: "LFDSA - IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)" },
+        {
+          dn:
+            "LFDSA - IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
+        },
         null,
-        { dn: "ODSA - IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)" },
-        { dn: "SCDSA - IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)" },
-        { dn: "STDSA - IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)" },
+        {
+          dn:
+            "ODSA - IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
+        },
+        {
+          dn:
+            "SCDSA - IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
+        },
+        {
+          dn:
+            "STDSA - IUs in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
+        },
         null,
-      ]
+      ],
     },
     {
-      name: "Communities included in Pre-TAS surveys (or routine monitoring/SSA)",
+      name:
+        "Communities included in Pre-TAS surveys (or routine monitoring/SSA)",
       type: rowTypes.DATA,
       cells: [
-        { dn: "LFDSA - Communities in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)" },
+        {
+          dn:
+            "LFDSA - Communities in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
+        },
         null,
-        { dn: "ODSA - Communities in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)" },
-        { dn: "SCDSA - Communities in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)" },
-        { dn: "STDSA - Communities in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)" },
+        {
+          dn:
+            "ODSA - Communities in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
+        },
+        {
+          dn:
+            "SCDSA - Communities in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
+        },
+        {
+          dn:
+            "STDSA - Communities in the evaluation area where Pre-TAS surveys were completed (or routine monitoring/SSA)",
+        },
         null,
-      ]
+      ],
     },
     {
-      name: "People participating in pre-TAS surveys (or routine monitoring/SSA)",
+      name:
+        "People participating in pre-TAS surveys (or routine monitoring/SSA)",
       type: rowTypes.DATA,
       cells: [
-        { dn: "LFDSA - People participating in pre-TAS surveys (or routine monitoring/SSA)" },
+        {
+          dn:
+            "LFDSA - People participating in pre-TAS surveys (or routine monitoring/SSA)",
+        },
         null,
-        { dn: "ODSA - People participating in pre-TAS surveys (or routine monitoring/SSA)" },
-        { dn: "SCDSA - People participating in pre-TAS surveys (or routine monitoring/SSA)" },
-        { dn: "STDSA - People participating in pre-TAS surveys (or routine monitoring/SSA)" },
+        {
+          dn:
+            "ODSA - People participating in pre-TAS surveys (or routine monitoring/SSA)",
+        },
+        {
+          dn:
+            "SCDSA - People participating in pre-TAS surveys (or routine monitoring/SSA)",
+        },
+        {
+          dn:
+            "STDSA - People participating in pre-TAS surveys (or routine monitoring/SSA)",
+        },
         null,
-      ]
+      ],
     },
     {
       name: "People positive in pre-TAS surveys (or routine monitoring/SSA)",
       type: rowTypes.DATA,
       cells: [
-        { dn: "LFDSA - People positive in pre-TAS surveys (or routine monitoring/SSA)" },
+        {
+          dn:
+            "LFDSA - People positive in pre-TAS surveys (or routine monitoring/SSA)",
+        },
         null,
-        { dn: "ODSA - People positive in pre-TAS surveys (or routine monitoring/SSA)" },
-        { dn: "SCDSA - People positive in pre-TAS surveys (or routine monitoring/SSA)" },
-        { dn: "STDSA - People positive in pre-TAS surveys (or routine monitoring/SSA)" },
+        {
+          dn:
+            "ODSA - People positive in pre-TAS surveys (or routine monitoring/SSA)",
+        },
+        {
+          dn:
+            "SCDSA - People positive in pre-TAS surveys (or routine monitoring/SSA)",
+        },
+        {
+          dn:
+            "STDSA - People positive in pre-TAS surveys (or routine monitoring/SSA)",
+        },
         null,
-      ]
+      ],
     },
     {
       name: "IUs where TAS/IA surveys were completed",
@@ -277,7 +374,7 @@
         { dn: "SCDSA - IUs where TAS/IA surveys were completed" },
         { dn: "STDSA - IUs where TAS/IA surveys were completed" },
         null,
-      ]
+      ],
     },
     {
       name: "People participating in IA/TAS surveys",
@@ -289,7 +386,7 @@
         { dn: "SCDSA - People participating in IA/TAS surveys" },
         { dn: "STDSA - People participating in IA/TAS surveys" },
         null,
-      ]
+      ],
     },
     {
       name: "People tested positive during IA/TAS surveys",
@@ -301,7 +398,7 @@
         { dn: "SCDSA - People tested positive during IA/TAS surveys" },
         { dn: "STDSA - People tested positive during IA/TAS surveys" },
         null,
-      ]
+      ],
     },
   ];
   // End row & cell definitions
@@ -365,8 +462,8 @@
     // This function counts all unique IUs with at least one value in this row
     // 1. Build dimensions list for query url
     const dimensions = cells
-      .filter((cell) => cell && cell.dId)
-      .map((cell) => cell.dId)
+      .filter((cell) => cell && cell.dxId)
+      .map((cell) => cell.dxId)
       .join(";");
 
     // 2. Query analytics:
@@ -406,7 +503,7 @@
       })
       .catch((err) => {
         // Format error for later handling
-        return Promise.reject({ ...err, message: "Unique IUs error"});
+        return Promise.reject({ ...err, message: "Unique IUs error" });
       });
   }
 
@@ -455,7 +552,7 @@
   }
 
   function populateCellDimensionIds(allDimensions) {
-    // Populates dimensionId (`dId`) on cells based on dimensionName
+    // Populates dimensionId (`dxId`) on cells based on dimensionName
     // Also populates `state.dimensionsToQuery` for analytics query
     const dimensionsToQuery = [];
 
@@ -465,9 +562,9 @@
 
       cells.forEach((cell) => {
         if (!cell) return;
-        if (cell.dId) {
+        if (cell.dxId) {
           // cell already has `dimensionId`; skip ID lookup
-          dimensionsToQuery.push(cell.dId);
+          dimensionsToQuery.push(cell.dxId);
           return;
         }
         if (!cell.dn) return;
@@ -487,7 +584,7 @@
 
         // Dimension found - add it to list to query and populate cell
         dimensionsToQuery.push(dimensionId);
-        cell.dId = dimensionId;
+        cell.dxId = dimensionId;
       });
     });
 
@@ -586,45 +683,43 @@
         if (!cells) return; // Empty row; return
 
         // Execute (possibly async) cell logic in _series_
-        return (
-          cells
-            .reduce((prevTask, cell, idx, arr) => {
-              return prevTask.then(async () => {
-                if (!cell) return;
-                const { dId: dimensionId, customLogic } = cell;
+        return cells
+          .reduce((prevTask, cell, idx, arr) => {
+            return prevTask.then(async () => {
+              if (!cell) return;
+              const { dxId: dimensionId, customLogic } = cell;
 
-                // Handle cell defined by dimension ID
-                if (dimensionId) {
-                  const data = analyticsResults.get(dimensionId);
-                  cell.value = data ?? "-";
-                  return;
-                }
+              // Handle cell defined by dimension ID
+              if (dimensionId) {
+                const data = analyticsResults.get(dimensionId);
+                cell.value = data ?? "-";
+                return;
+              }
 
-                // Handle cell defined by custom logic
-                if (customLogic) {
-                  try {
-                    cell.value = await customLogic(arr, idx);
-                  } catch (err) {
-                    // If error in custom logic, create alert
-                    const message = `
+              // Handle cell defined by custom logic
+              if (customLogic) {
+                try {
+                  cell.value = await customLogic(arr, idx);
+                } catch (err) {
+                  // If error in custom logic, create alert
+                  const message = `
                       ${err.message || "Custom logic error"}: 
                       ${err.status || ""} ${err.statusText || ""}.
                       See console.
                     `;
-                    state.alerts.push({
-                      identifier: "custom-logic",
-                      identifierValue: `row-${rowIdx}-idx-${idx}`,
-                      tooltipType: tooltipTypes.ERROR,
-                      message,
-                    });
-                    console.error(message, err);
-                  }
-                  return;
+                  state.alerts.push({
+                    identifier: "custom-logic",
+                    identifierValue: `row-${rowIdx}-idx-${idx}`,
+                    tooltipType: tooltipTypes.ERROR,
+                    message,
+                  });
+                  console.error(message, err);
                 }
-              });
-            }, Promise.resolve())
-            .catch(console.error.bind(console, "Cell population error: "))
-        );
+                return;
+              }
+            });
+          }, Promise.resolve())
+          .catch(console.error.bind(console, "Cell population error: "));
       })
     );
   }
@@ -707,12 +802,12 @@
 
     cells.forEach((cell, idx) => {
       if (!cell) return htmlRow.append("<td></td>");
-      
-      const { dn, dId, customLogic, value } = cell;
+
+      const { dn, dxId, customLogic, value } = cell;
       const newCell = $(`
         <td
           ${dn ? `data-dimension-name="${dn}"` : ""}
-          ${dId ? `data-dimension-id="${dId}"` : ""}
+          ${dxId ? `data-dimension-id="${dxId}"` : ""}
           ${customLogic ? `data-custom-logic="row-${rowIdx}-idx-${idx}"` : ""}
         ></td>
       `);
@@ -734,7 +829,8 @@
 
   function addTooltipToCell(htmlCell, { type, message }) {
     // Check if cell is valid:
-    if (!htmlCell.length) return console.warn("Invalid html cell when adding tooltip");
+    if (!htmlCell.length)
+      return console.warn("Invalid html cell when adding tooltip");
 
     const htmlTooltip = $(
       `<i class="fa ${type.icon} ${type.color}" data-toggle="tooltip" data-title="${message}"></i>`
@@ -766,16 +862,14 @@
 
     // Query new data and populate table
     // TODO: update period and org unit display
-    return (
-      getAnalyticsData()
-        .then(populateCellValues)
-        .then(populateHtmlTableBodyWithValues)
-        .then(addAlertTooltips)
-        .then(() => {
-          $("#downloadCSV").attr("disabled", false);
-          $("#downloadCSV").removeClass("disabled");
-        })
-    );
+    return getAnalyticsData()
+      .then(populateCellValues)
+      .then(populateHtmlTableBodyWithValues)
+      .then(addAlertTooltips)
+      .then(() => {
+        $("#downloadCSV").attr("disabled", false);
+        $("#downloadCSV").removeClass("disabled");
+      });
   }
 
   /**
@@ -1046,7 +1140,7 @@
         Filter Period and Org. Unit(s)
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <form id="filterForm" class="px-4 py-3 mb-0" style="min-width: 30rem;">
+        <form id="filterForm" class="px-4 py-3 mb-0" style="min-width: 30rem">
           <div class="row">
             <div class="col">
               <fieldset class="form-group">
@@ -1059,9 +1153,7 @@
 
             <div class="col-7">
               <fieldset class="form-group">
-                <legend class="pt-0">
-                  Organisation Unit:
-                </legend>
+                <legend class="pt-0">Organisation Unit:</legend>
                 <div id="orgUnitCheckboxes">
                   <!-- Populate by script -->
                 </div>
