fix: specify api version

--- a/dsa-report.html
+++ b/dsa-report.html
@@ -467,7 +467,7 @@
       .join(";");
 
     // 2. Query analytics:
-    return $.get("../api/analytics", {
+    return $.get("../api/34/analytics", {
       // Second orgunit dimension is hardcoded to IU level
       dimension: `dx:${dimensions},ou:${state.orgUnit};LEVEL-iGO9aN3ZSSi`,
       filter: `pe:${state.period}`,
@@ -518,9 +518,11 @@
     // TODO: ADjust filter (maybe even refactor)
     return Promise.all([
       $.get(
-        "../api/programIndicators.json?filter=displayName:like:DSA&paging=false"
+        "../api/34/programIndicators.json?filter=displayName:like:DSA&paging=false"
       ),
-      $.get("../api/indicators.json?filter=displayName:like:DSA&paging=false"),
+      $.get(
+        "../api/34/indicators.json?filter=displayName:like:DSA&paging=false"
+      ),
     ]).then((values) => {
       const [{ programIndicators }, { indicators }] = values;
       const allDimensions = [...programIndicators, ...indicators];
@@ -596,7 +598,7 @@
     // Query analytics API for data (with one monolithic query)
     const { dimensionsToQuery, period, orgUnit } = state;
 
-    return $.get("../api/analytics", {
+    return $.get("../api/34/analytics", {
       dimension: `dx:${dimensionsToQuery.join(";")}`,
       filter: `ou:${orgUnit},pe:${period}`,
       skipMeta: true,
@@ -638,7 +640,7 @@
     return Promise.all(
       dimensionsToQuery.map((dimensionId) => {
         // Query individual cell contents
-        return $.get("../api/analytics", {
+        return $.get("../api/34/analytics", {
           dimension: `dx:${dimensionId},pe:${period}`,
           filter: `ou:${orgUnit}`,
           skipMeta: true,
@@ -1008,7 +1010,7 @@
   }
 
   function setUpOrgUnitCheckboxes(maxLevel) {
-    $.get("../api/organisationUnits.json", { maxLevel, paging: false })
+    $.get("../api/34/organisationUnits.json", { maxLevel, paging: false })
       .then(({ organisationUnits: orgUnits }) => {
         if (!orgUnits) return;
 
