--- a/mda-report.html
+++ b/mda-report.html
@@ -1252,7 +1252,7 @@
         : state.period;
 
     // 2. Query analytics:
-    return $.get("../api/analytics", {
+    return $.get("../api/34/analytics", {
       // Second orgunit dimension is hardcoded to IU level
       dimension: `dx:${dimensions},ou:${state.orgUnit};LEVEL-iGO9aN3ZSSi`,
       filter: `pe:${filterPeriod}`,
@@ -1315,9 +1315,11 @@
     // Gets a list of all indicators' and program indicators' names and IDs
     return Promise.all([
       $.get(
-        "../api/programIndicators.json?filter=displayName:like:MDA&paging=false"
+        "../api/34/programIndicators.json?filter=displayName:like:MDA&paging=false"
       ),
-      $.get("../api/indicators.json?filter=displayName:like:MDA&paging=false"),
+      $.get(
+        "../api/34/indicators.json?filter=displayName:like:MDA&paging=false"
+      ),
     ]).then((values) => {
       const [{ programIndicators }, { indicators }] = values;
       const allDimensions = [...programIndicators, ...indicators];
@@ -1394,7 +1396,7 @@
     // Query analytics API for data (with one monolithic query)
     const { dimensionsToQuery, period, orgUnit } = state;
 
-    return $.get("../api/analytics", {
+    return $.get("../api/34/analytics", {
       dimension: `dx:${dimensionsToQuery.join(";")}`,
       filter: `ou:${orgUnit},pe:${period}`,
       skipMeta: true,
@@ -1436,7 +1438,7 @@
     return Promise.all(
       dimensionsToQuery.map((dimensionId) => {
         // Query individual cell contents
-        return $.get("../api/analytics", {
+        return $.get("../api/34/analytics", {
           dimension: `dx:${dimensionId},pe:${period}`,
           filter: `ou:${orgUnit}`,
           skipMeta: true,
@@ -1830,7 +1832,7 @@
   }
 
   function setUpOrgUnitCheckboxes(maxLevel) {
-    $.get("../api/organisationUnits.json", { maxLevel, paging: false })
+    $.get("../api/34/organisationUnits.json", { maxLevel, paging: false })
       .then(({ organisationUnits: orgUnits }) => {
         if (!orgUnits) return;
 
