fix: add rowIdx and tooltip to total pop. of IUs

--- a/mda-report.html
+++ b/mda-report.html
@@ -389,8 +389,10 @@
         null,
         { dn: "STMDA - Total Population of IUs" },
         {
-          customLogic: (cells, idx) =>
+          customLogic: (cells, idx, rowIdx) =>
             uniqueRespondingIUs(cells, {
+              idx,
+              rowIdx,
               showOnlyCurrentYearIfMultipleSelected: true,
             }).then(({ sumOfValues }) => sumOfValues),
           tooltips: [
